@@ -20,6 +20,7 @@ since 1.2 relase ( 'til 1.3 beta 1 :-)
 - Added subtotal dialog and formula
 - Paper layout can now be applied to all sheets
 - now you can define the default cell style
+- Autoscroll while selecting now also available for columns and row headers
 
 
 New functions:
